--- a/client/src/pages/top_artist/top_artist.css
+++ b/client/src/pages/top_artist/top_artist.css
@@ -5,6 +5,7 @@
   padding-bottom: 3rem;
   gap: 2rem;
   background-color: #E8E3D5;
+  border-radius: 0.5em;
 }
 @media (max-width: 768px) {
   .slide {
@@ -26,6 +27,9 @@
     height: 15rem;
   }
 }
+.slide .artist-data {
+  line-height: 3rem;
+}
 @media (max-width: 768px) {
   .slide .artist-data {
     align-self: flex-start;
@@ -33,6 +37,8 @@
 }
 .slide .artist-data .name {
   font-size: 4rem;
+  padding-left: 2rem;
+  padding-bottom: 1rem;
 }
 @media (max-width: 768px) {
   .slide .artist-data .name {
@@ -40,8 +46,57 @@
     font-size: 2rem;
   }
 }
+.slide .artist-data .cta-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 2rem;
+}
+@media (max-width: 768px) {
+  .slide .artist-data .cta-btn {
+    gap: 0.5rem;
+    display: none;
+  }
+}
+.slide .artist-data .cta-btn span {
+  border: 2px solid black;
+  padding: 1rem 2rem;
+  border-radius: 0.5em;
+}
+@media (max-width: 768px) {
+  .slide .artist-data .cta-btn span {
+    padding: 1rem;
+  }
+}
+.slide .artist-data .cta-btn .follow {
+  font-size: 2rem;
+}
+@media (max-width: 768px) {
+  .slide .artist-data .cta-btn .follow {
+    font-size: 1.3rem;
+  }
+}
+.slide .artist-data .cta-btn .btn-follow {
+  background-color: #3c3c3c;
+  color: white;
+  padding: 0.5rem 4rem;
+  font-size: 1.5rem;
+  border-radius: 0.4em;
+  cursor: pointer;
+  transition: all 0.3s ease-out;
+}
+.slide .artist-data .cta-btn .btn-follow:hover {
+  transform: translateY(-5);
+  background-color: #2d2d2d;
+}
+@media (max-width: 768px) {
+  .slide .artist-data .cta-btn .btn-follow {
+    padding: 0 1rem;
+    font-size: 1.3rem;
+  }
+}
 
-.icon {
+.artist-icon {
   display: flex;
   align-items: center;
   justify-content: center;
