--- a/client/src/app/home.css
+++ b/client/src/app/home.css
@@ -309,6 +309,7 @@
   font-size: 3rem;
   font-weight: 700;
   letter-spacing: -0.5px;
+  margin-bottom: 2rem;
 }
 @media (max-width: 768px) {
   .Home .content .artist .artist-heading {
