--- a/client/src/app/home.scss
+++ b/client/src/app/home.scss
@@ -341,6 +341,7 @@
                 font-size: 3rem;
                 font-weight: 700;
                 letter-spacing: -0.5px;
+                margin-bottom: 2rem;
 
                 @media (max-width: 768px) {
                     font-size: 2rem;
