--- a/client/src/app/auth/verify-otp/otp.css
+++ b/client/src/app/auth/verify-otp/otp.css
@@ -1,12 +1,11 @@
 .Otp {
   width: 100%;
   height: 100%;
-  background-image: url(../../../public//bg.avif);
+  background-image: url(../../../../public/bg.avif);
 }
 .Otp .container {
   width: 100%;
   height: 100%;
-  background-image: url(../../../public//bg.avif);
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
