--- a/client/src/app/auth/verify-otp/otp.scss
+++ b/client/src/app/auth/verify-otp/otp.scss
@@ -1,12 +1,12 @@
 .Otp {
     width: 100%;
     height: 100%;
-    background-image: url(../../../public//bg.avif);
+    background-image: url(../../../../public/bg.avif);
 
     .container {
         width: 100%;
         height: 100%;
-        background-image: url(../../../public//bg.avif);
+        
         background-position: center center;
         background-repeat: no-repeat;
         background-size: cover;
